v1.0.14/_sources/chapters/all_exec.md.txt
# List of 50 Executors in Jina

This version of Jina includes 50 Executors.

## Inheritances in a Tree View
- `JAMLCompatible`
   - `BaseExecutor`
      - `BaseIndexer`
         - `BaseVectorIndexer`
            - `BaseNumpyIndexer`
               - `NumpyIndexer`
         - `BaseKVIndexer`
            - `BinaryPbIndexer`
               - `DataURIPbIndexer`
            - `BaseCache`
               - `DocCache`
      - `BaseEvaluator`
         - `BaseRankingEvaluator`
            - `RecallEvaluator`
            - `PrecisionEvaluator`
         - `BaseTextEvaluator`
            - `TextLengthEvaluator`
         - `BaseEmbeddingEvaluator`
            - `CosineEvaluator`
            - `EuclideanEvaluator`
      - `CompoundExecutor`
         - `UniquePbIndexer`
         - `FileBasedEvaluator`
         - `CompoundIndexer`
         - `UniqueVectorIndexer`
      - `BaseClassifier`
      - `BaseEncoder`
         - `BaseNumericEncoder`
            - `TransformEncoder`
            - `BaseAudioEncoder`
            - `BaseImageEncoder`
            - `BaseVideoEncoder`
         - `BaseDevice`
            - `MindsporeDevice`
               - `BaseMindsporeEncoder`
            - `OnnxDevice`
               - `BaseOnnxEncoder`
            - `PaddleDevice`
               - `BasePaddleEncoder`
            - `TFDevice`
               - `BaseTFEncoder`
            - `TorchDevice`
               - `BaseTorchEncoder`
         - `BaseTextEncoder`
      - `BaseMultiModalEncoder`
      - `BaseRanker`
         - `Chunk2DocRanker`
         - `Match2DocRanker`
      - `BaseCrafter`
      - `BaseSegmenter`

## Modules in a Table View 

| Class | Module |
| --- | --- |
| `BaseAudioEncoder` | `jina.executors.encoders` |
| `BaseCache` | `jina.executors.indexers.cache` |
| `BaseClassifier` | `jina.executors.segmenters` |
| `BaseCrafter` | `jina.executors.segmenters` |
| `BaseDevice` | `jina.executors.encoders` |
| `BaseEmbeddingEvaluator` | `jina.executors.evaluators` |
| `BaseEncoder` | `jina.executors.segmenters` |
| `BaseEvaluator` | `jina.executors.segmenters` |
| `BaseExecutor` |   |
| `BaseImageEncoder` | `jina.executors.encoders` |
| `BaseIndexer` | `jina.executors.segmenters` |
| `BaseKVIndexer` | `jina.executors.indexers` |
| `BaseMindsporeEncoder` |   |
| `BaseMultiModalEncoder` | `jina.executors.segmenters` |
| `BaseNumericEncoder` | `jina.executors.encoders` |
| `BaseNumpyIndexer` | `jina.executors.indexers` |
| `BaseOnnxEncoder` |   |
| `BasePaddleEncoder` |   |
| `BaseRanker` | `jina.executors.segmenters` |
| `BaseRankingEvaluator` | `jina.executors.evaluators` |
| `BaseSegmenter` | `jina.executors.segmenters` |
| `BaseTFEncoder` |   |
| `BaseTextEncoder` | `jina.executors.encoders` |
| `BaseTextEvaluator` | `jina.executors.evaluators` |
| `BaseTorchEncoder` |   |
| `BaseVectorIndexer` | `jina.executors.indexers` |
| `BaseVideoEncoder` | `jina.executors.encoders` |
| `BinaryPbIndexer` | `jina.executors.indexers.cache` |
| `Chunk2DocRanker` | `jina.executors.rankers` |
| `CompoundExecutor` | `jina.executors.segmenters` |
| `CompoundIndexer` | `jina.executors.indexers` |
| `CosineEvaluator` | `jina.executors.evaluators.embedding.euclidean` |
| `DataURIPbIndexer` | `jina.executors.indexers.keyvalue` |
| `DocCache` | `jina.executors.indexers.cache` |
| `EuclideanEvaluator` | `jina.executors.evaluators.embedding.euclidean` |
| `FileBasedEvaluator` | `jina.executors.indexers` |
| `JAMLCompatible` |   |
| `Match2DocRanker` | `jina.executors.rankers` |
| `MindsporeDevice` |   |
| `NumpyIndexer` | `jina.executors.indexers.vector` |
| `OnnxDevice` |   |
| `PaddleDevice` |   |
| `PrecisionEvaluator` | `jina.executors.evaluators.rank.precision` |
| `RecallEvaluator` | `jina.executors.evaluators.rank.precision` |
| `TFDevice` |   |
| `TextLengthEvaluator` | `jina.executors.evaluators.text.length` |
| `TorchDevice` |   |
| `TransformEncoder` | `jina.executors.encoders` |
| `UniquePbIndexer` | `jina.executors.indexers` |
| `UniqueVectorIndexer` | `jina.executors.indexers` |