v1.1.6/_sources/chapters/all_exec.md.txt
# List of 68 Executors in Jina

This version of Jina includes 68 Executors.

## Inheritances in a Tree View
- `JAMLCompatible`
   - `BaseExecutor`
      - `BaseIndexer`
         - `BaseQueryIndexer`
            - `BaseVectorIndexer`
               - `BaseNumpyIndexer`
                  - `NumpyIndexer`
                     - `NumpyQueryIndexer`
            - `BinaryPbWriterMixin`
               - `BinaryPbQueryIndexer`
                  - `KeyValueQueryIndexer`
            - `CompoundExecutor`
               - `CompoundQueryExecutor`
                  - `CompoundQueryIndexer`
         - `BaseDBMSIndexer`
            - `BinaryPbWriterMixin`
               - `BinaryPbDBMSIndexer`
                  - `KeyValueDBMSIndexer`
         - `BaseKVIndexer`
            - `BaseCache`
               - `DocCache`
            - `BinaryPbWriterMixin`
               - `BinaryPbIndexer`
                  - `DataURIPbIndexer`
                  - `KeyValueIndexer`
         - `BaseVectorIndexer`
            - `BaseNumpyIndexer`
               - `NumpyIndexer`
                  - `VectorIndexer`
      - `BaseSegmenter`
      - `BaseEvaluator`
         - `BaseTextEvaluator`
            - `TextLengthEvaluator`
         - `BaseEmbeddingEvaluator`
            - `CosineEvaluator`
            - `EuclideanEvaluator`
         - `BaseRankingEvaluator`
            - `RecallEvaluator`
            - `PrecisionEvaluator`
      - `CompoundExecutor`
         - `FileBasedEvaluator`
         - `CompoundIndexer`
         - `UniqueVectorIndexer`
         - `UniquePbIndexer`
      - `BaseCrafter`
      - `BaseEncoder`
         - `BaseDevice`
            - `MindsporeDevice`
               - `BaseMindsporeEncoder`
            - `OnnxDevice`
               - `BaseOnnxEncoder`
            - `PaddleDevice`
               - `BasePaddleEncoder`
            - `TFDevice`
               - `BaseTFEncoder`
            - `TorchDevice`
               - `BaseTorchEncoder`
         - `BaseNumericEncoder`
            - `TransformEncoder`
            - `BaseAudioEncoder`
            - `BaseImageEncoder`
            - `BaseVideoEncoder`
         - `BaseTextEncoder`
      - `BaseRanker`
         - `Chunk2DocRanker`
         - `Match2DocRanker`
      - `BaseMultiModalEncoder`
      - `BaseClassifier`

## Modules in a Table View 

| Class | Module |
| --- | --- |
| `BaseAudioEncoder` | `jina.executors.encoders` |
| `BaseCache` | `jina.executors.indexers.keyvalue` |
| `BaseClassifier` | `jina.executors.encoders` |
| `BaseCrafter` | `jina.executors.encoders` |
| `BaseDBMSIndexer` | `jina.executors.indexers.dbms` |
| `BaseDevice` | `jina.executors.encoders` |
| `BaseEmbeddingEvaluator` | `jina.executors.evaluators.embedding` |
| `BaseEncoder` | `jina.executors.encoders` |
| `BaseEvaluator` | `jina.executors.encoders` |
| `BaseExecutor` |   |
| `BaseImageEncoder` | `jina.executors.encoders` |
| `BaseIndexer` | `jina.executors.encoders` |
| `BaseKVIndexer` | `jina.executors.indexers.dbms` |
| `BaseMindsporeEncoder` |   |
| `BaseMultiModalEncoder` | `jina.executors.encoders` |
| `BaseNumericEncoder` | `jina.executors.encoders` |
| `BaseNumpyIndexer` |   |
| `BaseNumpyIndexer` | `jina.executors.indexers.vector` |
| `BaseOnnxEncoder` |   |
| `BasePaddleEncoder` |   |
| `BaseQueryIndexer` | `jina.executors.indexers.dbms` |
| `BaseRanker` | `jina.executors.encoders` |
| `BaseRankingEvaluator` | `jina.executors.evaluators.embedding` |
| `BaseSegmenter` | `jina.executors.encoders` |
| `BaseTFEncoder` |   |
| `BaseTextEncoder` | `jina.executors.encoders` |
| `BaseTextEvaluator` | `jina.executors.evaluators.embedding` |
| `BaseTorchEncoder` |   |
| `BaseVectorIndexer` | `jina.executors.indexers.dbms` |
| `BaseVectorIndexer` | `jina.executors.indexers.query.compound` |
| `BaseVideoEncoder` | `jina.executors.encoders` |
| `BinaryPbDBMSIndexer` |   |
| `BinaryPbIndexer` |   |
| `BinaryPbQueryIndexer` |   |
| `BinaryPbWriterMixin` | `jina.executors.indexers.dbms` |
| `BinaryPbWriterMixin` | `jina.executors.indexers.keyvalue` |
| `BinaryPbWriterMixin` | `jina.executors.indexers.query.compound` |
| `Chunk2DocRanker` | `jina.executors.rankers` |
| `CompoundExecutor` | `jina.executors.encoders` |
| `CompoundExecutor` | `jina.executors.indexers.query.compound` |
| `CompoundIndexer` | `jina.executors.indexers.keyvalue` |
| `CompoundQueryExecutor` |   |
| `CompoundQueryIndexer` | `jina.executors.indexers.query.compound` |
| `CosineEvaluator` | `jina.executors.evaluators.embedding` |
| `DataURIPbIndexer` | `jina.executors.indexers.keyvalue` |
| `DocCache` | `jina.executors.indexers.cache` |
| `EuclideanEvaluator` | `jina.executors.evaluators.embedding` |
| `FileBasedEvaluator` | `jina.executors.indexers.keyvalue` |
| `JAMLCompatible` |   |
| `KeyValueDBMSIndexer` | `jina.executors.indexers.dbms.keyvalue` |
| `KeyValueIndexer` | `jina.executors.indexers.keyvalue` |
| `KeyValueQueryIndexer` | `jina.executors.indexers.query.keyvalue` |
| `Match2DocRanker` | `jina.executors.rankers` |
| `MindsporeDevice` |   |
| `NumpyIndexer` |   |
| `NumpyIndexer` | `jina.executors.indexers.vector` |
| `NumpyQueryIndexer` |   |
| `OnnxDevice` |   |
| `PaddleDevice` |   |
| `PrecisionEvaluator` | `jina.executors.evaluators.rank.precision` |
| `RecallEvaluator` | `jina.executors.evaluators.rank.precision` |
| `TFDevice` |   |
| `TextLengthEvaluator` | `jina.executors.evaluators.text.length` |
| `TorchDevice` |   |
| `TransformEncoder` | `jina.executors.encoders` |
| `UniquePbIndexer` | `jina.executors.indexers.keyvalue` |
| `UniqueVectorIndexer` | `jina.executors.indexers.keyvalue` |
| `VectorIndexer` | `jina.executors.indexers.vector` |